# 3-python-package-minesweepers

./: Pipfile  README.md  pyproject.toml
.github/workflows/: build.yaml
discordify/: discordify.py
src/discordify/: __init__.py  __main__.py  discordify.py
src/discordifyText/: __init__.py  __main__.py  discordifyText.py
tests/: test_discordify.py  test_discordifyText.py
