[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discordify"
description = "A package that transforms your sentences into various 'discord lingo', developed with pipenv, built with build using setuptools, uploaded to PyPI using twine, and distributed via pip."
version = "0.1.1"
authors = [
  { name="Harini Buddaluru", email="hb2657@nyu.edu" },
  { name="Franyel Diaz Rodriguez", email="fd2190@nyu.edu"}
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "build", "tutorial"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/software-students-spring2025/3-python-package-minesweepers"
"Repository" = "https://github.com/software-students-spring2025/3-python-package-minesweepers.git"
"Bug Tracker" = "https://github.com/software-students-spring2025/3-python-package-minesweepers/issues"

[project.scripts]
discordify = "discordify.__main__:main"
